<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/registerConfPass"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confPassText"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/registerProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/registerPass"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passText"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/registerConfPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/registerEmail"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_text"
        android:gravity="center"
        android:hint="@string/emailText"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/registerPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/registerName"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_text"
        android:gravity="center"
        android:hint="@string/usernameText"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/registerEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/usernameSignUpBttn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/trocchi"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/registerProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/usernameSignUpBttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/signUpBack"
        android:layout_width="36dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_black" />
</androidx.constraintlayout.widget.ConstraintLayout>